New post: On React Hooks

--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -125,10 +125,7 @@ img
 
 .post__content
 
-  ul,
-  ol
-    padding: 0
-    margin-left: 15px
+  ul
     list-style: none
 
     li
@@ -139,3 +136,6 @@ img
         color: $darkGrey
         position: absolute
         margin-left: -15px
+
+.twitter-tweet.twitter-tweet-rendered
+  margin: 3rem auto !important
