Simplify social-icon styles

--- a/src/styles/partials/_social-icons.styl
+++ b/src/styles/partials/_social-icons.styl
@@ -1,7 +1,6 @@
 .social-icons
   display: flex
-  justify-content: flex-end
-  padding: 1.5rem 0
+  justify-content: center
 
 .social-icons__icon
   width: 1.2rem
