--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -19,8 +19,8 @@ img
   display: block
 
 .post__container
-  width: 34rem
-  max-width: 100%
+  width: 100%
+  max-width: 34rem
   margin: 0 auto
   padding-bottom: 4rem
 
@@ -116,7 +116,7 @@ img
   margin-top: 1.5rem
 
   img
-    max-width: 350px
+    max-width: 375px
 
 /* overrides */
 .post__content
@@ -134,4 +134,5 @@ img
         margin-left: -15px
 
 .twitter-tweet.twitter-tweet-rendered
-  margin: 3rem auto !important
+  margin: 1.5rem auto!important
+  width: 375px!important
