Add newsletter-signup partial to bottom of blog posts

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -12,6 +12,8 @@
     {{ .Content }}
   </article>
   {{ partial "tags.html" .}}
+
+  {{ partial "newsletter-signup.html" .}}
 </div>
 {{ partial "social-icons.html" .}}
 {{ end }}
