--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -1,6 +1,7 @@
 @import '../_main'
 @import '../partials/_social-icons'
 @import '../partials/_github-syntax-highlighting'
+@import '../partials/_newsletter-signup'
 
 blockquote
   width: 95%
@@ -22,7 +23,6 @@ img
   width: 100%
   max-width: 34rem
   margin: 0 auto
-  padding-bottom: 4rem
 
 .post__title 
   margin-top: 0
@@ -140,3 +140,6 @@ img
 .twitter-tweet.twitter-tweet-rendered
   margin: 1.5rem auto!important
   width: 375px!important
+
+.newsletter__buttondown-link
+  display: none
