Add warning shortcode and update Shortcodes post

--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -123,6 +123,17 @@
   img
     max-width: 375px
 
+p.warning
+  background: #FFF9DF
+  padding: 1rem
+  font-size: 0.8rem
+  line-height: 1.5
+  color: #747160
+  border-left: 2px solid #747160
+
+  a
+    color: #747160
+
 /* overrides */
 .post__content
 
