--- a/src/styles/_main.styl
+++ b/src/styles/_main.styl
@@ -4,10 +4,7 @@
 @import 'partials/_typography'
 @import 'partials/_nav'
 
-.container 
-  height: 100%
-
-.container.nav--active
+body.nav--active
   overflow: hidden
 
 main
