Remove codepen icon

--- a/src/styles/partials/_social-icons.styl
+++ b/src/styles/partials/_social-icons.styl
@@ -10,10 +10,7 @@
 
 .social-icons__icon--twitter
   background-image: url(/icons/twitter.svg)
+  margin-right: 2rem
 
 .social-icons__icon--github
   background-image: url(/icons/github.svg)
-  margin: 0 2rem
-
-.social-icons__icon--codepen
-  background-image: url(/icons/codepen.svg)
