Define a new footer block in default template

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -53,6 +53,8 @@
     {{ block "main" . }} {{ end }}
   </main>
 
+  {{ block "footer" . }} {{ end }}
+
   <script src="/js/index.js"></script>
   {{ block "scripts" . }} {{ end }}
 </body>
