--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -134,6 +134,16 @@ p.warning
   a
     color: #747160
 
+footer
+  text-align: center
+  padding: 0 1.5rem
+  background: #F6F9FC
+
+  p
+    color: $grey
+    font-size: 0.65rem
+
+
 /* overrides */
 .post__content
 
