Normalize input styles on mobile

--- a/src/styles/partials/_normalize.styl
+++ b/src/styles/partials/_normalize.styl
@@ -1,5 +1,12 @@
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] 
+button[type="button"],
+button[type="reset"],
+button[type="submit"] 
   -webkit-appearance: button
+
+input,
+input[type=text],
+input[type=email]
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
