Create a post-pagination feature
The post-pagination feature adds links to the previous and next posts
based on the current post that the user is reading. If there is no
previous or next post, the link will not show.

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-  <div class="post__container">
+  <div class="post">
     <header class="post__header">
       <h1 class="post__title">{{.Title}}</h1>
       <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
@@ -12,6 +12,7 @@
       {{ partial "anchored-headings.html" .Content }}
     </article>
     {{ partial "tags.html" .}}
+    {{ partial "post-pagination.html" .}}
   </div>
 {{ end }}
 
