Rename newsletter url to mail

--- a/layouts/partials/newsletter-signup.html
+++ b/layouts/partials/newsletter-signup.html
@@ -17,7 +17,7 @@
         <input type="hidden" value="1" name="embed"/>
         <input class="newsletter__subscribe-form-inputs--submit" type="submit" value="Subscribe" />
       </div>
-      <a class="newsletter__learn-more" href="/newsletter">What is this about?</a>
+      <a class="newsletter__learn-more" href="/mail">What is this about?</a>
       <a class="newsletter__buttondown-link" href="https://buttondown.email" target="_blank">Powered by Buttondown</a>
     </form>
   </div>
