--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
     }
   </script>
 
-  <title>{{ .Page.Title }}</title>
+  <title>{{ .Page.Title }} | Jake Wiesler</title>
 
   <meta charset="UTF-8">
   <meta name="language" content="en">
