Add archive link to /mail route

--- a/src/styles/pages/mail.styl
+++ b/src/styles/pages/mail.styl
@@ -42,5 +42,9 @@
         position: absolute
         margin-left: -15px
 
+p > a 
+  font-weight: 400
+  color: $black
+
 .newsletter__learn-more
   display: none
