--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     <div class="splash">
       <h1>Hi, I'm Jake<span class="fancy">.</span></h1>
       <span class="handle">@jakewies</span>
-      <h2>I'm a <span class="underline">Front-end Developer</span> building things on the Web and <a href="/blog" class="underline">writing</a> about my experiences.</h2>
+      <h2>I'm a Front-end Developer building things on the Web and <a href="/blog" class="writing">writing</a> about my experiences.</h2>
       {{ partial "social-icons.html" .}}
     </div>
   </div>
